[project]
name = "documentation-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2026.2.25",
    "langchain>=1.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.1",
    "langchain-pinecone>=0.2.13",
    "langchain-tavily>=0.2.17",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
]
